--- a/pom.xml
+++ b/pom.xml
@@ -9,12 +9,32 @@
     <version>1.1</version>
     <packaging>maven-plugin</packaging>
 
+    <name>${project.groupId}:${project.artifactId}</name>
+    <description>A maven plugin that generates a version badge to include in documentation</description>
+    <url>https://opencodespace.org/version-badge</url>
+
     <properties>
         <maven.compiler.source>21</maven.compiler.source>
         <maven.compiler.target>21</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.build.outputEncoding>UTF-8</project.build.outputEncoding>
     </properties>
+
+    <licenses>
+        <license>
+            <name>The Apache Software License, Version 2.0</name>
+            <url>https://www.apache.org/licenses/LICENSE-2.0.txt</url>
+            <distribution>repo</distribution>
+        </license>
+    </licenses>
+
+    <developers>
+        <developer>
+            <id>wyatt</id>
+            <name>Wyatt</name>
+            <email>wyatt@opencodespace.org</email>
+        </developer>
+    </developers>
 
     <distributionManagement>
         <repository>
